--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <button onclick="movePlayer(0, 1)">↓</button>
   </div>
 
-  <audio id="winSound" src="https://cdn.pixabay.com/download/audio/2022/10/05/audio_163b1b6c1b.mp3" preload="auto"></audio>
+  <button id="restartBtn" onclick="restartGame()" style="display:none; margin-top: 20px;">إعادة اللعب</button>
+
+  <audio id="winSound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_84c42ae3d1.mp3?filename=kids-cheering-6792.mp3" preload="auto"></audio>
 
   <script src="script.js"></script>
 </body>
